section-4/source-control-project/api-builder-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: api-builder-local-image
spec:
  containers:
  - name: api-builder-local-image-container
    image: api-builder-image:latest
    imagePullPolicy: Never
