section-4/source-control-project/greeting-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-deployment
  labels:
    app: greeting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-app
  template:
    metadata:
      labels:
        app: greeting-app
    spec:
      containers:
      - name: greeting-app
        image: cmcgovern/greeting-image:latest
        ports:
        - containerPort: 8080
