section-4/source-control-project/api-builder-service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: greeting-app
