section-4/source-control-project/greeting-service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: greeting-app
